[package]
name = "my-algo"
version = "0.1.0"
authors = ["Nouzan <clobraindie@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"

[dev-dependencies]
structopt = "0.3.15"
proptest = "0.10.0"

[[example]]
name = "fib-recurrence"
path = "examples/fib_recurrence.rs"

[[example]]
name = "fib"
path = "examples/fib.rs"