[package]
name = "my-algo"
version = "0.1.0"
authors = ["Nouzan <clobraindie@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
anyhow = "1.0"
thiserror = "1.0"
bitstream-io = "0.9"

[dev-dependencies]
structopt = "0.3.15"
proptest = "0.10.0"
permutation_iterator = "0.1.2"

[[example]]
name = "fib-recurrence"
path = "examples/fib_recurrence.rs"

[[example]]
name = "fib"
path = "examples/fib.rs"

[[example]]
name = "list"
path = "examples/list.rs"